--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./style.css">
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -28,13 +28,13 @@
 <body>
 
 <div class="container image">
-  <img  src="/images/logo.svg" alt="">
+  <img  src="./images/logo.svg" alt="">
 </div>  
 
 
 <div class="container maindiv">
     <div class="section1">
-    <img src="/images/illustration-mockups.svg" alt="">
+    <img src="./images/illustration-mockups.svg" alt="">
   </div>
 <div class="section2">
   <h1> Build The Community Your Fans Will Love</h1>
