Update images pathes

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
     <div class="container links">
       <a
-        href="https://www.facebook.com/amira.hashem.9469/"
+        href="https://www.facebook.com"
         class="fab fa-facebook"
         aria-label="Facebook"
         target="_blank"
@@ -79,7 +79,7 @@
         target="_blank"
       ></a>
       <a
-        href="https://www.linkedin.com/in/amira-hashem-505729284/"
+        href="https://www.linkedin.com/"
         class="fab fa-instagram"
         aria-label="Linkedin"
         target=""
